chore(styles): vertical align stop card header content, round stop cards

--- a/src/app/shared/styles/components/stop-card.scss
+++ b/src/app/shared/styles/components/stop-card.scss
@@ -5,6 +5,7 @@ section {
   display: flex;
   flex-direction: column;
   border: 0.5px solid $dark-color;
+  overflow: hidden;
   border-radius: 5px;
   margin-bottom: 1rem;
 
@@ -20,6 +21,7 @@ section {
   letter-spacing: 1px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .card-body {
